Even more spelling corrections

--- a/doc/en/index.docbook
+++ b/doc/en/index.docbook
@@ -42,7 +42,7 @@
       <itemizedlist>
       <listitem><para>Available in multiple languages</para></listitem>
       <!--<listitem><para>Google Applications for Domains Support! </para></listitem>-->
-      <listitem><para>eMail snippets</para></listitem>
+      <listitem><para>Email snippets</para></listitem>
       <listitem><para>DCOP interface to Google Mail</para></listitem>
       <listitem><para>Custom search</para></listitem>
       <listitem><para>Store password safely, using the KDE Wallet</para></listitem>
