--- a/po/et.po
+++ b/po/et.po
@@ -245,7 +245,7 @@ msgid "KCheckGMail"
 msgstr "KCheckGmail "
 
 #: kcheckgmailtray.cpp:145
-msgid "Configure &Notications..."
+msgid "Configure &Notifications..."
 msgstr "Seadista &Märguandeid"
 
 #: kcheckgmailtray.cpp:147
@@ -815,7 +815,7 @@ msgstr ""
 
 #. gmail-mail-snippet - Comment
 #: eventsrc:12
-msgid "eMail snippets when moving the mouse over a threads menu entry"
+msgid "Email snippets when moving the mouse over a threads menu entry"
 msgstr ""
 
 #. no-unread-gmail - Name
