--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -236,7 +236,7 @@ msgid "KCheckGMail"
 msgstr "KCheckGmailTray"
 
 #: kcheckgmailtray.cpp:145
-msgid "Configure &Notications..."
+msgid "Configure &Notifications..."
 msgstr "Configurar &Notificacoes..."
 
 #: kcheckgmailtray.cpp:147
@@ -793,7 +793,7 @@ msgstr ""
 
 #. gmail-mail-snippet - Comment
 #: eventsrc:12
-msgid "eMail snippets when moving the mouse over a threads menu entry"
+msgid "Email snippets when moving the mouse over a threads menu entry"
 msgstr ""
 
 #. no-unread-gmail - Name
