--- a/po/de.po
+++ b/po/de.po
@@ -246,7 +246,7 @@ msgid "KCheckGMail"
 msgstr "KCheckGmail"
 
 #: kcheckgmailtray.cpp:145
-msgid "Configure &Notications..."
+msgid "Configure &Notifications..."
 msgstr "&Benachrichtigungen konfigurieren..."
 
 #: kcheckgmailtray.cpp:147
@@ -813,7 +813,7 @@ msgstr ""
 
 #. gmail-mail-snippet - Comment
 #: eventsrc:12
-msgid "eMail snippets when moving the mouse over a threads menu entry"
+msgid "Email snippets when moving the mouse over a threads menu entry"
 msgstr ""
 
 #. no-unread-gmail - Name
