--- a/po/fr.po
+++ b/po/fr.po
@@ -243,8 +243,8 @@ msgid "KCheckGMail"
 msgstr "KCheckGMail"
 
 #: kcheckgmailtray.cpp:142
-msgid "Configure &Notications..."
-msgstr "Configurer les &Notications"
+msgid "Configure &Notifications..."
+msgstr "Configurer les &Notifications"
 
 #: kcheckgmailtray.cpp:144
 msgid "&Configure KCheckGMail..."
@@ -810,7 +810,7 @@ msgstr ""
 
 #. gmail-mail-snippet - Comment
 #: eventsrc:12
-msgid "eMail snippets when moving the mouse over a threads menu entry"
+msgid "Email snippets when moving the mouse over a threads menu entry"
 msgstr ""
 
 #. no-unread-gmail - Name
