--- a/po/it.po
+++ b/po/it.po
@@ -244,7 +244,7 @@ msgid "KCheckGMail"
 msgstr "KCheckGMail"
 
 #: kcheckgmailtray.cpp:145
-msgid "Configure &Notications..."
+msgid "Configure &Notifications..."
 msgstr "Configura &notifiche..."
 
 #: kcheckgmailtray.cpp:147
@@ -849,7 +849,7 @@ msgstr "Pezzetto di mail"
 
 #. gmail-mail-snippet - Comment
 #: eventsrc:12
-msgid "eMail snippets when moving the mouse over a threads menu entry"
+msgid "Email snippets when moving the mouse over a threads menu entry"
 msgstr ""
 "Pezzetto di eMail muovendo il mouse sopra ad una voce del menu dei discorsi"
 
