--- a/po/ru.po
+++ b/po/ru.po
@@ -244,7 +244,7 @@ msgid "KCheckGMail"
 msgstr "KCheckGmail"
 
 #: kcheckgmailtray.cpp:145
-msgid "Configure &Notications..."
+msgid "Configure &Notifications..."
 msgstr "Настроить &Уведомления..."
 
 #: kcheckgmailtray.cpp:147
@@ -811,7 +811,7 @@ msgstr ""
 
 #. gmail-mail-snippet - Comment
 #: eventsrc:12
-msgid "eMail snippets when moving the mouse over a threads menu entry"
+msgid "Email snippets when moving the mouse over a threads menu entry"
 msgstr ""
 
 #. no-unread-gmail - Name
