--- a/po/wa.po
+++ b/po/wa.po
@@ -241,7 +241,7 @@ msgid "KCheckGMail"
 msgstr "KCheckGMail"
 
 #: kcheckgmailtray.cpp:142
-msgid "Configure &Notications..."
+msgid "Configure &Notifications..."
 msgstr "&Notifiaedjes d' apontiaedje..."
 
 #: kcheckgmailtray.cpp:144
@@ -816,7 +816,7 @@ msgstr "Moncea d' emile"
 
 #. gmail-mail-snippet - Comment
 #: eventsrc:12
-msgid "eMail snippets when moving the mouse over a threads menu entry"
+msgid "Email snippets when moving the mouse over a threads menu entry"
 msgstr ""
 
 #. no-unread-gmail - Name
