--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ kcheckgmail (0.5.7.5-1) unstable; urgency=high
     + Change maintainer to Debian KDE Extras Team and add myself as uploader
     + Remove Jose Luis Tallon from uploaders: thanks for all your work!
     + Remove useless dependency on kdebase-bin (Closes: #460478)
+    + Bump standards version to 3.8.0, no changes needed
   * debian/docs: don't install the useless TODO file
   * debian/compat: bump to 5
   * debian/rules: rewritten, using cdbs now
