--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+kcheckgmail (0.5.7.6-1) unstable; urgency=low
+
+  * New upstream release
+    - Added Catalan, Greek, and Simplified Chinese translations
+    - Updated Hungarian translation
+    - Add missing ending semi colon in Categories
+    - Report correct version
+  * debian/control: XS-DM-Upload-Allowed: yes
+
+ -- Raphael Geissert <atomo64@gmail.com>  Mon, 04 Aug 2008 22:44:26 -0500
+
 kcheckgmail (0.5.7.5-1) unstable; urgency=high
 
   * New upstream release
